{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 14,
  "lineage": "8deda872-7a06-3926-26b6-41e6e6c183df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04638833abb4ba385",
            "domain": "vpc",
            "id": "eipalloc-04638833abb4ba385",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-180-22.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.180.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Demo EIP"
            },
            "tags_all": {
              "Name": "Demo EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:261007486006:instance/i-0bf0f53846f8e625b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf0f53846f8e625b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037bb8302bc934a71",
            "private_dns": "ip-10-0-2-166.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9c07850c9775017",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-092babf690c9419c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ebacfac8b6c4a9a",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092babf690c9419c2"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_vpc_SG",
            "aws_subnet.private",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:261007486006:instance/i-09b6ca8df1a9157bb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b6ca8df1a9157bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d5b2baa52e9841a",
            "private_dns": "ip-10-0-1-162.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_ip": "13.233.108.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a3e0af4c0636f61",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-092babf690c9419c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f119d1ae632866d",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092babf690c9419c2"
            ]
          },
          "dependencies": [
            "aws_security_group.demo_vpc_SG",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Intgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:internet-gateway/igw-0fd3b9c627ee01bff",
            "id": "igw-0fd3b9c627ee01bff",
            "owner_id": "261007486006",
            "tags": {
              "Name": "Intgate"
            },
            "tags_all": {
              "Name": "Intgate"
            },
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04638833abb4ba385",
            "association_id": "eipassoc-05d2ec59906e95f49",
            "connectivity_type": "public",
            "id": "nat-0ef412b34f0a7742b",
            "network_interface_id": "eni-063fe1521e8acb104",
            "private_ip": "10.0.1.239",
            "public_ip": "13.200.180.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f119d1ae632866d",
            "tags": {
              "Name": "Demo NAT"
            },
            "tags_all": {
              "Name": "Demo NAT"
            }
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:route-table/rtb-001676847443e0683",
            "id": "rtb-001676847443e0683",
            "owner_id": "261007486006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef412b34f0a7742b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri_route"
            },
            "tags_all": {
              "Name": "pri_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT",
            "aws_nat_gateway.name",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:route-table/rtb-0be1af3667c4c150f",
            "id": "rtb-0be1af3667c4c150f",
            "owner_id": "261007486006",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd3b9c627ee01bff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route"
            },
            "tags_all": {
              "Name": "pub_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Intgateway",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0809f8dba999c048b",
            "route_table_id": "rtb-001676847443e0683",
            "subnet_id": "subnet-05ebacfac8b6c4a9a"
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_nat_gateway.name",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001215f3f96005055",
            "route_table_id": "rtb-0be1af3667c4c150f",
            "subnet_id": "subnet-07f119d1ae632866d"
          },
          "dependencies": [
            "aws_internet_gateway.Intgateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_vpc_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:security-group/sg-092babf690c9419c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092babf690c9419c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240119070903070000000001",
            "name_prefix": "terraform-",
            "owner_id": "261007486006",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:subnet/subnet-05ebacfac8b6c4a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ebacfac8b6c4a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261007486006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_sub"
            },
            "tags_all": {
              "Name": "pri_sub"
            },
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:subnet/subnet-07f119d1ae632866d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f119d1ae632866d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261007486006",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_sub"
            },
            "tags_all": {
              "Name": "pub_sub"
            },
            "vpc_id": "vpc-06e96518e51aeefff"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:261007486006:vpc/vpc-06e96518e51aeefff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c447d7fd8c32da9c",
            "default_route_table_id": "rtb-00145672998858fb6",
            "default_security_group_id": "sg-0ffba9c80f8610d13",
            "dhcp_options_id": "dopt-0eadc0672dee7aac1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e96518e51aeefff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00145672998858fb6",
            "owner_id": "261007486006",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}